# ktra

./: .dockerignore  .gitignore  Cargo.toml  Justfile  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: publish.yml  push.yml  tests.yml
docker/: ktra.Dockerfile  ktra_openid.Dockerfile
src/: config.rs  db_manager.rs  delete.rs  error.rs  get.rs  index_manager.rs  lib.rs  main.rs  models.rs  openid.rs  post.rs  put.rs  sparse.rs  utils.rs
src/apis/: mirroring.rs  mod.rs  openid.rs  user.rs
src/apis/registry/: delete.rs  get.rs  mod.rs  put.rs
src/db_manager/: mongo_db_manager.rs  redis_db_manager.rs  sled_db_manager.rs  traits.rs  utils.rs
test-awrp/: Cargo.toml
test-awrp/src/: main.rs
