[package]
name = "ktra"
version = "0.4.0"
authors = ["moriturus <moriturus@alimensir.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Your Little Cargo Registry"
repository = "https://github.com/moriturus/ktra"
keywords = ["ktra", "registry", "cargo"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[features]
default = ["secure-auth", "db-sled"]

secure-auth = ["rand", "rust-argon2"]
db-sled = ["sled"]
db-redis = ["redis"]

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "fs", "blocking", "io-util", "stream"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
futures = "0.3"
semver = { version = "0.11", features = ["serde"] }
url = { version = "2.1", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
git2 = "0.13"
bytes = "0.5"
sha2 = "0.9"
toml = "0.5"
clap = "2.33"
async-trait = "0.1"

rand = { version = "0.7", optional = true }
rust-argon2 = { version = "0.8", optional = true }

sled = { version = "0.34", optional = true }
redis = { version = "0.17", features = ["tokio-comp"], optional = true }

