[package]
name = "ktra"

version = "0.7.0"
authors = [ "moriturus <moriturus@alimensir.com>" ]
description = "Your Little Cargo Registry"
documentation = "https://book.ktra.dev"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moriturus/ktra"
keywords = [ "ktra", "registry", "cargo" ]
categories = [ "command-line-utilities", "development-tools" ]
readme = "README.md"

[features]
default = [ "db-sled", "crates-io-mirroring", "cli" ]

crates-io-mirroring = [ "reqwest" ]
openid = [ "openidconnect", "reqwest" ]
db-sled = [ "sled" ]
db-redis = [ "redis" ]
db-mongo = [ "mongodb", "bson" ]
cli = [ "tracing-subscriber", "clap", "toml", "anyhow" ]

[dependencies]
tokio = { version = "1.1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
] }
warp = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
semver = { version = "0.11", features = [ "serde" ] }
url = { version = "2.2", features = [ "serde" ] }
thiserror = "1.0"
git2 = "0.13"
bytes = "1.0"
sha2 = "0.9"
async-trait = "0.1"

reqwest = { version = "0.11", features = [
  "gzip",
  "brotli",
  "json",
], optional = true }

rand = "0.8"
rust-argon2 = "0.8"

sled = { version = "0.34", optional = true }
redis = { version = "0.19", features = [ "tokio-comp" ], optional = true }
mongodb = { version = "1.1", optional = true }
bson = { version = "1.1", features = [ "u2i" ], optional = true }

openidconnect = { version = "2.1.1", optional = true }

tracing-subscriber = { version = "0.2", optional = true }
clap = { version = "2.33", optional = true }
toml = { version = "0.5", optional = true }
anyhow = { version = "1.0", optional = true }

[[bin]]
name = "ktra"
path = "bin/ktra.rs"
required-features = [ "cli" ]
